--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,15 +218,23 @@ input[type=submit] {
 
 
 /* Media Tags */
-@media screen and (max-width: 980px) {
+@media screen and (min-width: 769px) {
 
-  .container {
-    width: 75%;
-    max-width: 960px;
-    margin: 0 auto;
-    clear: both;
+  
+ .main-section {
+width: 75% ;
+}
+
+nav{
+  float: right;
+}
+
+ul {
+  list-style-type: none;
+}
 
 }
+
 
 @media screen and (max-width: 768px) {
 
