--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,8 +258,8 @@ ul {
   width: 50%;
 }
 
-@media screen and (max-width: 640px) {
-
+@media screen and (max-width: 640px) 
+{
 
   .container {
     width: 100%;
@@ -301,4 +301,5 @@ ul {
   ul {
     list-style-type: none;
   }
+}
 }
